array generation added

--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
         <ul class="input-array-form">
             <li><span>Input Array size: </span></li>
             <li><span id="value-res"></span></li>
-            <li><input type="range" min="0" max="10" value="5" id="array-size-inpt"></li>
-            <li><button>generate</button></li>
+            <li><input type="range" min="1" max="10" value="5" id="array-size-inpt"></li>
+            <li><button id="genButt">generate</button></li>
         </ul>
+        <div class="input-Array-block">
+        </div>
     </div>
     <script src="main.js"></script>
 </body>
