--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         </ul>
         <div class="input-Array-block">
         </div>
+        <button id="sort-btn">sort</button>
     </div>
     <script src="main.js"></script>
 </body>
