--- a/index.html
+++ b/index.html
@@ -18,7 +18,14 @@
         </ul>
         <div class="input-Array-block">
         </div>
+
         <button id="sort-btn">sort</button>
+
+        <div class="output-Array-block">
+            <table id="outputArrayTable" class="invisible">
+                <tr></tr>
+            </table>
+        </div>
     </div>
     <script src="main.js"></script>
 </body>
